# assembler

./: .gitignore  CMakeLists.txt  code.as  code.asm  code1.asm  config.h  errors.h  main.c
addressing_mode/: addressing_mode.c
assembler/: addressing_mode.c  addressing_mode.h  are.h  assembler.c  assembler.h  assembler_context.h  assembly_strings.c  assembly_strings.h  directive_descriptor.c  directive_descriptor.h  directive_to_machine_code.c  directive_to_machine_code.h  enums.h  file_reader.c  file_reader.h  handle_label.c  handle_label.h  handle_line.c  handle_line.h  instruction_to_machine_code.c  instruction_to_machine_code.h  instruction_word.h  operand_descriptor.c  operand_descriptor.h  operand_to_machine_code.c  operand_to_machine_code.h  operation_descriptor.c  operation_descriptor.h  read_file.c  read_file.h  register_error.h  sentence_type.h  words.h  write_file.c  write_file.h
assembler/context/: assembler_context.h  context.h
assembler/descriptors/: directive_descriptor.c  directive_descriptor.h  line_descriptor.h  operand_descriptor.c  operand_descriptor.h  operation_descriptor.c  operation_descriptor.h
assembler/extern_handler/: extern_handler.c  extern_handler.h  extern_label_list.c  extern_label_list.h  extern_label_node.h  extern_label_usage.c  extern_label_usage.h
assembler/handlers/: handle_label.c  handle_label.h  handle_line.c  handle_line.h
assembler/preprocessing/: line_list.c  line_list.h  line_list.h.c  macro.h  macro_table.c  macro_table.h  preprocess.h  preprocessing.c  preprocessing.h  preprocessing_context.h
assembler/symbol_table/: global_symbol_table.c  global_symbol_table.h  symbol.c  symbol.h  symbol_node.h  symbol_table.c  symbol_table.h
assembler/utils/: assembly_strings.c  assembly_strings.h  error_checking.c  error_checking.h  errors.h  utils.c  utils.h
descriptors/: operand_descriptor.h  operation_descriptor.h
extern_handler/: extern_handler.c  extern_label_list.c  extern_label_usage.c
hash_table/: hash_table.c  hash_table.h  int_hash_table.c  int_hash_table.h  node.h
machine_code_generator/: instruction_to_machine_code.c  instruction_to_machine_code.h
machine_code_generator/operand_to_machine_code/: operand_to_machine_code.c  operand_to_machine_code.h
memory_allocator/: memory_allocator.c  memory_allocator.h
memory_tracker/: global_memory_tracker.c  global_memory_tracker.h  scope_memory_tracker.c  scope_memory_tracker.c.h
symbol_table/: global_symbol_table.c  global_symbol_table.h  symbol.c  symbol.h  symbol_node.c  symbol_table.c  symbol_table.h
symbol_table/global_symbol_table/: global_symbol_table.c  global_symbol_table.h
symbol_table/symbol/: symbol.c  symbol.h
symbol_table/symbol_node/: symbol_node.c  symbol_node.h
symbol_table/table/: symbol_table.c  symbol_table.h
tests/: bad.as  macro.as  test1.as  test1.c  test1.h  test2.as  test2.c  test2.h  test3.c  test3.h  test4.c  test4.c.h  test4.h
utils/: utils.c  utils.h
words/: operand_words.h
